--- a/edge-analytics-ui/src/app/app.component.html
+++ b/edge-analytics-ui/src/app/app.component.html
@@ -76,8 +76,8 @@
             </div>
             
           </div>
-          <button class="button button--primary" (click)="onSendMessage()">Send</button>
-          
+          <button class="button button--primary" (click)="onSendMessage()">Send Kafka Message</button>
+          <button class="button button--primary" (click)="onTestKafkaStreams()">Test Kafka Streams</button>
       </section>
 
       <section class="contextRegion">
